styles/fields/radio.css
label + radio-wrapper {
  margin-top: 1rem;
}

.radio-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(7.5rem, 1fr));
  gap: 1rem;
}

.radio-inner {
  border: 1px solid var(--stroke-default);
  border-radius: .5rem;

  display: grid;
  justify-items: center;
  gap: .5rem;
  padding: 2rem .5rem .5rem;

  position: relative;

  & input,
  & input:focus,
  & input:hover {
    all: unset;
    position: absolute;
    inset: 0;
  }

  .radio-image {
    background-image: url(../../assets/icons/radio-default.svg);

    width: 1.5rem;
    height: 1.5rem;

    position: absolute;
    top: .5rem;
    left: .5rem;
  }

  &:hover, &:focus-within {
    border: 1px solid var(--stroke-highlight);
    
    & .radio-image {
      background-image: url(../../assets/icons/radio-hover.svg);
    }
  }

  &:has(:checked) {
    border: 2px solid var(--stroke-highlight);

    & .radio-image {
      background-image: url(../../assets/icons/radio-checked.svg);
    }
  }
}

